# reactor-simulation-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  reactorwindow.cpp  reactorwindow.h  reactorwindow.ui
src/: main.cpp  reactor.cpp  reactor.h  reactorwindow.cpp  reactorwindow.h
tests/: TestReactor.cpp  TestReactor.h  TestReactorWindow.cpp  TestReactorWindow.h
